tests/neg/objects/20-object.ts

// Cannot assign Unique object

let a_unique_obj = { c: 3 };

let an_alias_to_a_unique_obj = a_unique_obj;
